--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 # My own files
 functions.ipynb
 .vscode
-
+/code_snippet/email_credentials.py
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
