added csv folder

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 functions.ipynb
 .vscode
 /code_snippet/email_credentials.py
+venv/
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
